Resolve fixme issues