@@ -5,9 +5,12 @@ import java.util.List;
 import java.util.Random;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
+import org.assertj.core.api.Assertions;
 import org.eclipse.collections.api.list.MutableList;
 import org.eclipse.collections.api.list.primitive.IntList;
+import org.eclipse.collections.impl.factory.primitive.IntLists;
 import org.eclipse.collections.impl.list.mutable.FastList;
 import org.eclipse.collections.impl.list.mutable.primitive.IntArrayList;
 import org.junit.jupiter.api.BeforeEach;
@@ -43,35 +46,24 @@ class IntListTest {
 
     @Test
     void sum() {
-        // fixme:
-        // Assert.assertEquals(this.expectedSum, this.jdkList.stream().mapToLong(i -> i).sum());
-//        Assert.assertEquals(this.expectedSum, this.jdkList.parallelStream().mapToLong(i -> i).sum());
-//        Assert.assertEquals(this.expectedSum, this.ecIntList.sum());
-//        Assert.assertEquals(this.expectedSum, this.ecList.sumOfInt(i -> i));
-//        Assert.assertEquals(this.expectedSum, this.ecList.asParallel(this.executor, 100_000).sumOfInt(i -> i));
+        Assertions.assertThat(this.jdkList.stream().mapToLong(i -> i).sum()).isEqualTo(this.expectedSum);
+        Assertions.assertThat(this.jdkList.parallelStream().mapToLong(i -> i).sum()).isEqualTo(this.expectedSum);
+        Assertions.assertThat(this.ecIntList.sum()).isEqualTo(this.expectedSum);
+        Assertions.assertThat(this.ecList.sumOfInt(i -> i)).isEqualTo(this.expectedSum);
+        Assertions.assertThat(this.ecList.asParallel(this.executor, 100_000).sumOfInt(i -> i)).isEqualTo(this.expectedSum);
     }
 
     @Test
     void filter() {
-        /*
-        fixme:
-        Assert.assertEquals(this.jdkList.stream().filter(i -> i % 2 == 0).collect(Collectors.toList()),
-                            this.ecList.select(i -> i % 2 == 0));
-        Assert.assertEquals(this.ecIntList.select(i -> i % 2 == 0),
-                            this.ecList.select(i -> i % 2 == 0).collectInt(Integer::intValue));
-        Assert.assertEquals(this.jdkList.parallelStream().filter(i -> i % 2 == 0).collect(Collectors.toList()),
-                            this.ecList.asParallel(this.executor, 100_000).select(i -> i % 2 == 0).toList());*/
+        Assertions.assertThat(this.ecList.select(i -> i % 2 == 0)).isEqualTo(this.jdkList.stream().filter(i -> i % 2 == 0).collect(Collectors.toList()));
+        Assertions.assertThat(this.ecList.select(i -> i % 2 == 0).collectInt(Integer::intValue)).isEqualTo(this.ecIntList.select(i -> i % 2 == 0));
+        Assertions.assertThat(this.ecList.asParallel(this.executor, 100_000).select(i -> i % 2 == 0).toList()).isEqualTo(this.jdkList.parallelStream().filter(i -> i % 2 == 0).collect(Collectors.toList()));
     }
 
     @Test
     void transform() {
-        /*
-        fixme:
-        Assert.assertEquals(this.jdkList.stream().mapToInt(i -> i * 2).boxed().collect(Collectors.toList()),
-                            this.ecList.collect(i -> i * 2).toList());
-        Assert.assertEquals(this.ecIntList.collectInt(i -> i * 2, IntLists.mutable.empty()),
-                            this.ecList.collect(i -> i * 2).collectInt(Integer::intValue).toList());
-        Assert.assertEquals(this.jdkList.parallelStream().mapToInt(i -> i * 2).boxed().collect(Collectors.toList()),
-                            this.ecList.asParallel(this.executor, 100_000).collect(i -> i * 2).toList());*/
+        Assertions.assertThat(this.ecList.collect(i -> i * 2).toList()).isEqualTo(this.jdkList.stream().mapToInt(i -> i * 2).boxed().collect(Collectors.toList()));
+        Assertions.assertThat(this.ecList.collect(i -> i * 2).collectInt(Integer::intValue).toList()).isEqualTo(this.ecIntList.collectInt(i -> i * 2, IntLists.mutable.empty()));
+        Assertions.assertThat(this.ecList.asParallel(this.executor, 100_000).collect(i -> i * 2).toList()).isEqualTo(this.jdkList.parallelStream().mapToInt(i -> i * 2).boxed().collect(Collectors.toList()));
     }
 }
